infrastructure/configs/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/pod-selector: app=longhorn-ui
    gethomepage.dev/name: Longhorn
    gethomepage.dev/description: Distributed block storage
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/href: https://longhorn.${SECRET_DOMAIN}
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`longhorn.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
